# FFmpegBase

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lchad/ffmpegbase/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/lchad/ffmpegbase/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/lchad/ffmpegbase/: ExampleUnitTest.kt
ffplayvideo/: build.gradle
ffplayvideo/src/androidTest/java/com/cfox/ffplayvideo/: ExampleInstrumentedTest.kt
ffplayvideo/src/main/: AndroidManifest.xml
ffplayvideo/src/main/cpp/: CMakeLists.txt  JavaCall.cpp  JavaCall.h  Player.cpp  Player.h  clog.h  native-lib.cpp
ffplayvideo/src/main/cpp/include/libavutil/: ffversion.h
ffplayvideo/src/main/java/com/cfox/ffplayvideo/: ConfigListener.kt  MainActivity.kt  PlayManager.kt
ffplayvideo/src/main/res/layout/: activity_main.xml
ffplayvideo/src/main/res/values/: strings.xml  themes.xml
ffplayvideo/src/main/res/values-night/: themes.xml
ffplayvideo/src/test/java/com/cfox/ffplayvideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
